# reality-pulse

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: swift.yml
ObjectCaptureReconstruction/: AppDataModel.swift  ContentView.swift  ImageHelper.swift  ObjectCaptureReconstruction.entitlements  ObjectCaptureReconstructionApp.swift  ThumbnailView.swift
ObjectCaptureReconstruction.xcodeproj/: project.pbxproj
ObjectCaptureReconstruction/GaussianSplat/: GaussianSplatDatasetPreparer.swift  GaussianSplatTrainingManager.swift  GaussianSplatTrainingRunner.swift
ObjectCaptureReconstruction/GaussianSplat/Engine/: Cargo.toml  README.md
ObjectCaptureReconstruction/GaussianSplat/Engine/.github/: copilot-instructions.md
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-dataset/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-dataset/src/: config.rs  lib.rs  scene.rs  scene_loader.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-kernel/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-kernel/src/: lib.rs  test_helpers.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-kernel/src/shaders/: wg.wgsl
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-prefix-sum/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-prefix-sum/src/: lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-prefix-sum/src/shaders/: prefix_sum_add_scanned_sums.wgsl  prefix_sum_helpers.wgsl  prefix_sum_scan.wgsl  prefix_sum_scan_sums.wgsl
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-process/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-process/src/: args_file.rs  config.rs  lib.rs  message.rs  slot.rs  train_stream.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render-bwd/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render-bwd/src/: burn_glue.rs  lib.rs  render_bwd.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render-bwd/src/shaders/: project_backwards.wgsl  rasterize_backwards.wgsl
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render/src/: bounding_box.rs  burn_glue.rs  camera.rs  dim_check.rs  gaussian_splats.rs  get_tile_offset.rs  lib.rs  render.rs  render_aux.rs  sh.rs  shaders.rs  validation.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render/src/shaders/: helpers.wgsl  map_gaussian_to_intersects.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-render/src/tests/: mod.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-rerun/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-rerun/src/: burn_to_rerun.rs  lib.rs  visualize_tools.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-serde/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-serde-macros/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-serde-macros/src/: lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-serde/src/: export.rs  import.rs  lib.rs  ply_gaussian.rs  quant.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-sort/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-sort/src/: lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-sort/src/shaders/: sort_count.wgsl  sort_reduce.wgsl  sort_scan_add.wgsl  sort_scatter.wgsl  sorting.wgsl
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-train/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-train/src/: adam_scaled.rs  config.rs  eval.rs  lib.rs  lod.rs  msg.rs  multinomial.rs  quat_vec.rs  splat_init.rs  ssim.rs  stats.rs  train.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-training-bridge/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-training-bridge/src/: ffi.rs  lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-vfs/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-vfs/src/: data_source.rs  lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-wgsl/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/brush-wgsl/src/: lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/colmap-reader/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/colmap-reader/src/: lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/lpips/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/lpips/src/: lib.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/rrfd/: Cargo.toml
ObjectCaptureReconstruction/GaussianSplat/Engine/crates/rrfd/src/: android.rs  lib.rs  wasm.rs
ObjectCaptureReconstruction/GaussianSplat/Engine/include/: brush_training_bridge.h
ObjectCaptureReconstruction/Models/: CodableGaussianSplatTrainingConfiguration.swift  CodableSessionConfiguration.swift  GaussianSplatTrainingJob.swift  JobDraft.swift  ReconstructionJob.swift  ScheduleConfig.swift
ObjectCaptureReconstruction/Processing/: BottomBarView.swift  ModelView.swift  ProcessingView.swift  ReconstructionProgressView.swift  ReprocessView.swift  TopBarView.swift
ObjectCaptureReconstruction/Queue/: COLMAPStatusView.swift  GaussianSplatJobRowView.swift  GaussianSplatJobSetupView.swift  JobRowView.swift  JobSetupView.swift  QueueDashboardView.swift  ScheduleSettingsView.swift  SfMJobRowView.swift  SfMJobSetupView.swift
ObjectCaptureReconstruction/Scheduler/: JobScheduler.swift
ObjectCaptureReconstruction/Settings/: SettingsView.swift
scripts/: bundle-colmap.sh
(+253 files in other folders)
