[package]
name = "brush-dataset"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-vfs.path = "../brush-vfs"
brush-serde.path = "../brush-serde"
colmap-reader.path = "../colmap-reader"

burn.workspace = true

thiserror = { workspace = true }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
glam.workspace = true

tracing.workspace = true
log.workspace = true
rand.workspace = true

tokio_with_wasm.workspace = true
clap.workspace = true
itertools = "0.14"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["io-util"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "fs", "macros"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
