[package]
name = "brush-kernel"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-wgsl.path = "../brush-wgsl"
burn.workspace = true
burn-cubecl.workspace = true
burn-wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }

[lints]
workspace = true
