[package]
name = "brush-prefix-sum"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-kernel.path = "../brush-kernel"
brush-wgsl.path = "../brush-wgsl"
burn.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
burn-wgpu.workspace = true
burn-cubecl.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[package.metadata.cargo-shear]
ignored = ["bytemuck"]

[lints]
workspace = true
