
[package]
name = "brush-process"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
debug-validation = ["brush-train/debug-validation"]
training = ["dep:brush-train", "dep:brush-dataset", "dep:brush-rerun", "brush-serde/export"]

[dependencies]
brush-render.path = "../brush-render"
brush-vfs.path = "../brush-vfs"
brush-serde.path = "../brush-serde"

burn.workspace = true
burn-cubecl.workspace = true
burn-wgpu.workspace = true

alphanumeric-sort.workspace = true
anyhow.workspace = true
async-fn-stream.workspace = true

clap.workspace = true
rand.workspace = true
log.workspace = true
glam.workspace = true
web-time.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true

wgpu.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-stream.workspace = true
tokio_with_wasm.workspace = true

brush-train = { path = "../brush-train", optional = true }
brush-dataset = { path = "../brush-dataset", optional = true }
brush-rerun = { path = "../brush-rerun", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
