[package]
name = "brush-render"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
brush-prefix-sum.path = "../brush-prefix-sum"
assert_approx_eq.workspace = true
brush-kernel.path = "../brush-kernel"
brush-sort.path = "../brush-sort"
brush-wgsl.path = "../brush-wgsl"

burn.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
burn-wgpu.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

glam.workspace = true
clap.workspace = true
serde.workspace = true
tracing.workspace = true
log.workspace = true

[package.metadata.cargo-shear]
ignored = ["bytemuck"]

[features]
debug-validation = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
