[package]
name = "brush-train"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
debug-validation = ["brush-render-bwd/debug-validation"]

[dependencies]
brush-render.path = "../brush-render"
brush-dataset.path = "../brush-dataset"
brush-render-bwd.path = "../brush-render-bwd"
brush-serde.path = "../brush-serde"
lpips.path = "../lpips"

anyhow.workspace = true
image.workspace = true
clap.workspace = true
serde.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
log.workspace = true
hashbrown.workspace = true
ball-tree.workspace = true
rayon.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
burn = { workspace = true, features = ["autodiff"] }
burn-cubecl.workspace = true

[dev-dependencies]
brush-kernel = { path = "../brush-kernel" }
tokio = { workspace = true, features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
