[package]
name = "brush-vfs"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
rrfd.path = "../rrfd"

thiserror.workspace = true
async_zip.workspace = true
serde.workspace = true
log.workspace = true

tokio-stream.workspace = true
path-clean = "1.0.1"
tokio-util = { workspace = true, features = ["compat"] }
tokio_with_wasm = { workspace = true, features = ["rt"] }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { workspace = true, features = [
    "Window",
    "Location",
    "Request",
    "RequestInit",
    "RequestCredentials",
    "RequestMode",
    "Response",
    "Headers",
    "File",
    "ReadableStream",
] }

tokio = { workspace = true, features = ["io-util", "macros", "rt", "time"] }

wasm-bindgen-futures.workspace = true
wasm-streams.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
futures-util = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "fs", "macros", "rt"] }
reqwest.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
