[package]
name = "brush-wgsl"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
naga_oil.workspace = true
regex = "1.11.1"
regex-syntax = "0.8.5"
data-encoding = "2.6.0"
wgpu.workspace = true

syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
