[package]
name = "rrfd"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "io-util"] }

[target.'cfg(all(not(target_family = "wasm"), not(target_os = "android")))'.dependencies]
tokio = { workspace = true, features = ["fs", "sync", "io-util"] }
rfd = "0.17"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
lazy_static = "1.5.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "HtmlInputElement",
    "Blob",
    "ReadableStream",
    "Window",
    "Event",
    "Document",
    "Element",
    "EventTarget",
    "Url",
    "HtmlAnchorElement",
    "FileSystemHandle",
    "FileSystemHandleKind",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
] }
js-sys = "0.3"
wasm-streams.workspace = true
futures-util = "0.3"
futures-channel = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"

[lints]
workspace = true
